--- a/estilos/index.css
+++ b/estilos/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
+/* Geral */
 * {
     margin: 0;
     padding: 0;
@@ -10,12 +13,18 @@ body {
     min-width: 350px;
     padding: 18px;
 }
+
 .container > .card {
-    width: 340px;
+    width: 320px;
     height: 250px;
     border-radius: 1rem;
     margin: auto;
     background-color: brown;
+    color: white;
+}
+.container .Perfil {
+    grid-row: 1/2;
+    grid-column: 1;
 }
 .container .card .imgContainer {
     height: 20%;
@@ -26,14 +35,93 @@ body {
     position: relative;
     height: 80%;
     padding: 2rem;
-    border: solid 2px white;
     border-radius: 1rem;
-    color: white;
+    font-family: 'Rubik', sans-serif;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    border: solid 2px white;
     background-color:   hsl(235, 46%, 20%);
 }
 .container > .card > .mainCard h2 {
-    font: normal 18px Rubik;
+    font-size: 18px;
 }
+.dots {
+    font-size: 30px;
+    margin-left: auto;
+    line-height: 0px;
+}
+.container > .card > .mainCard p {
+    font-size: 35px;
+}
+.lastWeek {
+    grid-row: 3;
+}
+
+/* Específico */
+.container .Perfil {
+    background-color:   hsl(235, 46%, 20%);
+    height: 200px;
+}
+
+.container .Perfil .infoPerfil {
+    max-height: 200px;
+    height: 80%;
+    border-radius: 1rem;
+    padding: 25px;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    background-color: hsl(246, 80%, 60%);
+}
+.container .Perfil .containerImgPerfil{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    margin: 100% 0;
+    transform: translateY(-65%);
+    border: solid 2px white;
+    grid-column: 1;
+    grid-row: 1/3;
+}
+.container .Perfil .containerImgPerfil img{
+    height: 100%;
+    width: 100%;
+}
+.Perfil .infoPerfil > span {
+    grid-row: 1;
+    grid-column: 2;
+    line-height: 89px;
+    font-size: 12px;
+    padding-left: 15px;
+}
+.Perfil .infoPerfil > h1 {
+    font: normal 15px 'Rubik', sans-serif;
+    grid-row: 1;
+    grid-column: 2;
+    position: relative;
+    top: 55px;
+    padding-left: 15px;
+}
+
+.Perfil .dailyWeeklyMonthly {
+    display: flex;
+    justify-content: space-around;
+}
+.Perfil .dailyWeeklyMonthly span {
+    padding: 14px;
+    font-size: 12px;
+}
+
+
+
+
+
+
+
+
+
+
 .container .Work {
     background-color: hsl(15, 100%, 70%);
 }
@@ -62,4 +150,48 @@ body {
     .container .card {
         width: 250px;
     }
+    .container .Perfil {
+        grid-column: 1;
+        grid-row: 1/3;
+        max-height: 100%;
+        height: 100%;
+
+    }
+    .Perfil .infoPerfil {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        
+    }
+
+
+    .container .Perfil .containerImgPerfil{
+        grid-column: 1;
+        grid-row: 1;
+    }
+    .Perfil .infoPerfil > span {
+        grid-row: 2;
+        grid-column: 1;
+        line-height: normal;
+    }
+    .Perfil .infoPerfil > h1 {
+        font: normal 15px 'Rubik', sans-serif;
+        grid-row: 3;
+        grid-column: 1;
+        position: relative;
+        top: 55px;
+        padding-left: 15px;
+    }
+
+
+
+    .Perfil .dailyWeeklyMonthly {
+        display: inline;
+    }
 }
+
+
+
+
+
+
+
